--- a/src/main/resources/org/exbin/framework/bined/gui/resources/BinaryStatusPanel.properties
+++ b/src/main/resources/org/exbin/framework/bined/gui/resources/BinaryStatusPanel.properties
@@ -26,3 +26,4 @@ cursorPositionShowOffsetCheckBoxMenuItem.text=Show offset
 deltaMemoryModeRadioButtonMenuItem.text=Delta Memory Mode
 ramMemoryModeRadioButtonMenuItem.text=RAM Memory Mode
 cursorPositionCodeTypeMenu.text=Code Type
+editModeLabel.toolTipText=Edit mode
