--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ buildscript {
 }
 import org.gradle.util.VersionNumber
 
-String binedVersion = '0.2.0-SNAPSHOT';
+String binedVersion = '0.2.0';
 
 sourceCompatibility = '1.8'
 
@@ -89,8 +89,8 @@ dependencies {
     implementation ":bined-operation-swing-${binedVersion}"
     implementation ":bined-swing-${binedVersion}"
     implementation ":bined-swing-extended-${binedVersion}"
-    implementation ":paged_data-0.2.0-20200423.194250-5"
-    implementation ":paged_data-delta-0.2.0-20200124.190959-4"
+    implementation ":paged_data-0.2.0"
+    implementation ":paged_data-delta-0.2.0"
     implementation ':jsr305-3.0.2'
     testImplementation group : 'junit', name: 'junit', version: '4.10'
 }
@@ -118,7 +118,7 @@ distributions {
             into('') {
                 from project.jar.archivePath
                 include '*'
-                rename { filename -> "BinEd.jar" }
+                rename { filename -> "BinEdPlugin.jar" }
             }
         }
     }
