Updates from BinEd editor - 4

--- a/src/main/resources/org/exbin/bined/jedit/main/resources/BinEdManager.properties
+++ b/src/main/resources/org/exbin/bined/jedit/main/resources/BinEdManager.properties
@@ -63,3 +63,20 @@ insertDataAction.text=Insert Data
 insertDataAction.shortDescription=Inserts data to current cursor position
 convertDataAction.text=Convert Data
 convertDataAction.shortDescription=Convert currently selected data
+compareFilesAction.text=Compare Files
+compareFilesAction.shortDescription=Compare two files
+clipboardContentAction.text=Clipboard Content
+clipboardContentAction.shortDescription=Show available flavors of content in clipboard
+dragDropContentAction.text=Drag&Drop Content
+dragDropContentAction.shortDescription=Show available flavors of content in drag and drop item
+editFindAction.text=Find
+editFindAction.shortDescription=Find words in text
+editFindAction.smallIcon=/org/exbin/framework/bined/search/resources/icons/tango-icon-theme/16x16/actions/edit-find.png
+editFindAgainAction.text=Find Again
+editFindAgainAction.shortDescription=Repeat the last search
+editFindAgainAction.smallIcon=/org/exbin/framework/bined/search/resources/icons/tango-icon-theme/16x16/actions/edit-find.png
+editReplaceAction.text=Replace
+editReplaceAction.shortDescription=Find and replace given string for another
+editReplaceAction.smallIcon=/org/exbin/framework/bined/search/resources/icons/tango-icon-theme/16x16/actions/edit-find-replace.png
+showParsingPanelAction.text=Show Parsing Panel
+showParsingPanelAction.shortDescription=Show panel with content parsing preview at the cursor position
