--- a/src/main/resources/org/exbin/bined/jedit/resources/BinEdPlugin.properties
+++ b/src/main/resources/org/exbin/bined/jedit/resources/BinEdPlugin.properties
@@ -1,9 +1,9 @@
 Application.name = BinEd
 Application.title = BinEd Binary/Hex Editor
 Application.release = 0.2.1
-Application.mode = DEV
-Application.version = 0.2.1 DEV
-Application.product= BinEd Binary/He Editor 0.2.1 DEV
+Application.mode = 
+Application.version = 0.2.1
+Application.product= BinEd Binary/Hex Editor 0.2.1
 Application.vendor = ExBin Project
 Application.homepage = https://bined.exbin.org/jedit-plugin/
 Application.vendorId = ExBin Project
