--- a/src/main/resources/BinEd.props
+++ b/src/main/resources/BinEd.props
@@ -2,7 +2,7 @@ plugin.BinEdPlugin.name=BinEd
 plugin.BinEdPlugin.author=ExBin Project
 plugin.BinEdPlugin.version=0.2.1
 plugin.BinEdPlugin.docs=docs/index.html
-plugin.BinEdPlugin.description=Binary/hex editor based on BinEd library.
+plugin.BinEdPlugin.description=Binary/hex editor plugin based on BinEd library.
 plugin.BinEdPlugin.longdescription=description.html
 plugin.BinEdPlugin.depend.0=jedit 04.05.00.00
 plugin.BinEdPlugin.depend.1=jdk 1.8
