--- a/BinEd.props
+++ b/BinEd.props
@@ -6,6 +6,7 @@ plugin.BinEdPlugin.description=Binary/hex editor plugin based on BinEd library.
 plugin.BinEdPlugin.longdescription=description.html
 plugin.BinEdPlugin.depend.0=jedit 04.05.00.00
 plugin.BinEdPlugin.depend.1=jdk 1.8
+plugin.BinEdPlugin.jars=binary_data-delta.jar binary_data-paged.jar binary_data.jar bined-core.jar bined-extended.jar bined-highlight-swing.jar bined-operation-swing.jar bined-operation.jar bined-swing-extended.jar bined-swing.jar bcprov-jdk15on.jar
 plugin.BinEdPlugin.activate=defer
 
 bined.title=BinEd Binary/Hex Editor
