--- a/build.xml
+++ b/build.xml
@@ -3,36 +3,36 @@
     This is an ant build.xml file for building the BinEd plugin for jEdit.
   </description>
 
-  <property name="build.support" value="../../jEdit/build-support" />
+  <property name="build.support" value=".." />
   <property file="build.properties"/>
   <property file="../build.properties"/>
   <property name="compiler.source" value="8" />
   <property name="compiler.target" value="8" />
-  <property name="src.dir" value="src" />
+  <property name="src.dir" value="src/main/java" />
+  <property name="docs-proc.target" value="none" />
+  <!-- new properties for build-support.xml to work with the src/main/resources layout -->
+  <property name="packageFilesSourceDir" value="src/main/resources" />
+  <property name="extraFilesSourceDir" value="src/main/resources" />
 
   <!--<property name="user-doc.xml" location = "users-guide.xml"/> -->
   <import file="${build.support}/plugin-build.xml" />
 
-  <!-- Extra files that should be included in the jar -->
+  <!-- Take everything (non empty) from src/main/resources -->
   <selector id="packageFiles">
-    <or>
-        <filename name="src/dist/readme.txt" />
-        <filename name="actions.xml" />
-        <filename name="dockables.xml" />
-    </or>
+	<size value="0" when="greater" />
   </selector>
 
-  <!-- Add your plugin's specific dependencies here -->
-  <path id="project.class.path">
-    <pathelement path="build/lib/*.jar" />
-  </path>
-
   <target name="build.prepare">
-    <!-- Copy over required dependencies to install.dir -->
-    <copy todir="${install.dir}">
-      <fileset dir="lib">
-         <filename name="*.jar"/>
+    <!-- There can be only one source for packageFiles at the moment so I put the readme there -->
+    <copy todir="src/main/resources">
+      <fileset dir="src/dist">
+         <filename name="readme.txt"/>
       </fileset>
     </copy>
+    <!-- these libs will end-up in jedit settings for the "view" task
+         where I run jEdit in a container: that is bad -->
+    <delete file="/lib/jedit.jar"/>
+    <delete file="/lib/jsr305-3.0.2.jar"/>
   </target>
+
 </project>
